fix: Stabilize layout by adding `scrollbar-gutter: stable` and removing explicit overflow properties.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap');
 
 html {
-  overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
 
 * {
@@ -17,8 +17,6 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
-  width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -30,7 +28,6 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 a {
